Fix tree node icon alignment

--- a/ui/core-react/src/core-react/tree/Node.scss
+++ b/ui/core-react/src/core-react/tree/Node.scss
@@ -53,11 +53,9 @@ $node-font-size: $iui-font-size;
   }
 
   &-icon {
+    position: relative;
+    top: 1px;
     width: 16px;
-    height: 24px;
-    display: inline-block;
-    box-sizing: border-box;
-    padding: 5px 0;
     margin-right: 5px;
   }
 
